Added basic page to Add New Trips

--- a/static/locales/en/page-new-trip.json
+++ b/static/locales/en/page-new-trip.json
@@ -1,3 +1,7 @@
 {
-  "pageTitle": "Add new trip"
+  "pageTitle": "Add new trip",
+  "tripName": "Trip name",
+  "timeOffset": "Time offset",
+  "addButton": "Save new trip",
+  "addedFeedback": "New trip added!"
 }
