Re-organize app menu and display proper information

--- a/static/locales/es/app-menu.json
+++ b/static/locales/es/app-menu.json
@@ -1,6 +1,6 @@
 {
   "home": "Inicio",
   "trips": "Viajes",
-  "addNew": "Añadir nuevo...",
+  "addNew": "Nuevo viaje",
   "settings": "Configuración"
 }
